--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "devDependencies": {
     "@vuepress/bundler-webpack": "2.0.0-rc.18",
+    "@vuepress/plugin-search": "^2.0.0-rc.55",
     "sass-embedded": "^1.79.5",
+    "sass-loader": "^16.0.2",
+    "vite": "5.1.7",
     "vue": "^3.5.12",
     "vuepress": "2.0.0-rc.18",
-    "vuepress-theme-hope": "2.0.0-rc.59",
-    "sass-loader": "^16.0.2"
+    "vuepress-plugin-search-pro": "^2.0.0-rc.59",
+    "vuepress-theme-hope": "2.0.0-rc.59"
   }
 }
