--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@vuepress/bundler-webpack": "2.0.0-rc.18",
     "@vuepress/plugin-comment": "^2.0.0-rc.60",
+    "@vuepress/plugin-docsearch": "^2.0.0-rc.56",
     "@vuepress/plugin-search": "^2.0.0-rc.55",
     "sass-embedded": "^1.79.5",
     "sass-loader": "^16.0.2",
