--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "vuepress": "2.0.0-rc.18",
     "vuepress-plugin-search-pro": "^2.0.0-rc.59",
     "vuepress-theme-hope": "2.0.0-rc.59"
+  },
+  "dependencies": {
+    "aplayer": "^1.10.1",
+    "axios": "^1.7.9"
   }
 }
